@startuml
entity "Profile" as PR {
  +id: Long
  +name: String
}

entity "Playlist" as P {
  +id: Long
  +name: String
  +genre: String
  +mood: String
}

entity "Song" as S {
  +id: Long
  +title: String
  +artist: String
  +genre: String
}

PR ||--o{ P : "creates"
P }o--o{ S : "contains"
PR }o--o{ PR : "is compared with (compatibility)"
@enduml
